lib/stats/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stats
spec:
  type: ClusterIP
  sessionAffinity: None
  selector:
    app: stats
  ports:
    - name: http
      port: 8000
      protocol: TCP
      targetPort: http
